fix(security & perf): comprehensive audit pass 3 - fix chat impersonation, enforce @Valid on controllers, add block checks to reactions/groups/milestones/followers, remove PII from chat DTOs, add DB indexes & helmet/rate-limiting to Node chat service